grammar/BaliInstructionSetParser.js
// Generated from grammar/BaliInstructionSet.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var BaliInstructionSetListener = require('./BaliInstructionSetListener').BaliInstructionSetListener;
var BaliInstructionSetVisitor = require('./BaliInstructionSetVisitor').BaliInstructionSetVisitor;

var grammarFileName = "BaliInstructionSet.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "'SKIP INSTRUCTION'", "'JUMP'", "'TO'", 
                     "'ON'", "'NONE'", "'TRUE'", "'FALSE'", "'PUSH'", "'HANDLER'", 
                     "'ELEMENT'", "'SOURCE'", "'POP'", "'COMPONENT'", "'LOAD'", 
                     "'VARIABLE'", "'PARAMETER'", "'DOCUMENT'", "'MESSAGE'", 
                     "'STORE'", "'DRAFT'", "'INVOKE'", "'WITH'", "'PARAMETERS'", 
                     "'EXECUTE'", "'TARGET'", "'HANDLE'", "'EXCEPTION'", 
                     "'RESULT'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, "LABEL", "NUMBER", "LITERAL", "SYMBOL", 
                      "EOL", "SPACE" ];

var ruleNames =  [ "procedure", "step", "label", "instruction", "skipInstruction", 
                   "jumpInstruction", "pushInstruction", "popInstruction", 
                   "loadInstruction", "storeInstruction", "invokeInstruction", 
                   "executeInstruction", "handleInstruction" ];

function BaliInstructionSetParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

BaliInstructionSetParser.prototype = Object.create(antlr4.Parser.prototype);
BaliInstructionSetParser.prototype.constructor = BaliInstructionSetParser;

Object.defineProperty(BaliInstructionSetParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

BaliInstructionSetParser.EOF = antlr4.Token.EOF;
BaliInstructionSetParser.T__0 = 1;
BaliInstructionSetParser.T__1 = 2;
BaliInstructionSetParser.T__2 = 3;
BaliInstructionSetParser.T__3 = 4;
BaliInstructionSetParser.T__4 = 5;
BaliInstructionSetParser.T__5 = 6;
BaliInstructionSetParser.T__6 = 7;
BaliInstructionSetParser.T__7 = 8;
BaliInstructionSetParser.T__8 = 9;
BaliInstructionSetParser.T__9 = 10;
BaliInstructionSetParser.T__10 = 11;
BaliInstructionSetParser.T__11 = 12;
BaliInstructionSetParser.T__12 = 13;
BaliInstructionSetParser.T__13 = 14;
BaliInstructionSetParser.T__14 = 15;
BaliInstructionSetParser.T__15 = 16;
BaliInstructionSetParser.T__16 = 17;
BaliInstructionSetParser.T__17 = 18;
BaliInstructionSetParser.T__18 = 19;
BaliInstructionSetParser.T__19 = 20;
BaliInstructionSetParser.T__20 = 21;
BaliInstructionSetParser.T__21 = 22;
BaliInstructionSetParser.T__22 = 23;
BaliInstructionSetParser.T__23 = 24;
BaliInstructionSetParser.T__24 = 25;
BaliInstructionSetParser.T__25 = 26;
BaliInstructionSetParser.T__26 = 27;
BaliInstructionSetParser.T__27 = 28;
BaliInstructionSetParser.T__28 = 29;
BaliInstructionSetParser.LABEL = 30;
BaliInstructionSetParser.NUMBER = 31;
BaliInstructionSetParser.LITERAL = 32;
BaliInstructionSetParser.SYMBOL = 33;
BaliInstructionSetParser.EOL = 34;
BaliInstructionSetParser.SPACE = 35;

BaliInstructionSetParser.RULE_procedure = 0;
BaliInstructionSetParser.RULE_step = 1;
BaliInstructionSetParser.RULE_label = 2;
BaliInstructionSetParser.RULE_instruction = 3;
BaliInstructionSetParser.RULE_skipInstruction = 4;
BaliInstructionSetParser.RULE_jumpInstruction = 5;
BaliInstructionSetParser.RULE_pushInstruction = 6;
BaliInstructionSetParser.RULE_popInstruction = 7;
BaliInstructionSetParser.RULE_loadInstruction = 8;
BaliInstructionSetParser.RULE_storeInstruction = 9;
BaliInstructionSetParser.RULE_invokeInstruction = 10;
BaliInstructionSetParser.RULE_executeInstruction = 11;
BaliInstructionSetParser.RULE_handleInstruction = 12;

function ProcedureContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_procedure;
    return this;
}

ProcedureContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProcedureContext.prototype.constructor = ProcedureContext;

ProcedureContext.prototype.step = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StepContext);
    } else {
        return this.getTypedRuleContext(StepContext,i);
    }
};

ProcedureContext.prototype.EOF = function() {
    return this.getToken(BaliInstructionSetParser.EOF, 0);
};

ProcedureContext.prototype.EOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BaliInstructionSetParser.EOL);
    } else {
        return this.getToken(BaliInstructionSetParser.EOL, i);
    }
};


ProcedureContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterProcedure(this);
	}
};

ProcedureContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitProcedure(this);
	}
};

ProcedureContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitProcedure(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.ProcedureContext = ProcedureContext;

BaliInstructionSetParser.prototype.procedure = function() {

    var localctx = new ProcedureContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, BaliInstructionSetParser.RULE_procedure);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 29;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 26;
                this.match(BaliInstructionSetParser.EOL); 
            }
            this.state = 31;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 32;
        this.step();
        this.state = 37;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 33;
                this.match(BaliInstructionSetParser.EOL);
                this.state = 34;
                this.step(); 
            }
            this.state = 39;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

        this.state = 43;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BaliInstructionSetParser.EOL) {
            this.state = 40;
            this.match(BaliInstructionSetParser.EOL);
            this.state = 45;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 46;
        this.match(BaliInstructionSetParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StepContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_step;
    return this;
}

StepContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StepContext.prototype.constructor = StepContext;

StepContext.prototype.instruction = function() {
    return this.getTypedRuleContext(InstructionContext,0);
};

StepContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

StepContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterStep(this);
	}
};

StepContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitStep(this);
	}
};

StepContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitStep(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.StepContext = StepContext;

BaliInstructionSetParser.prototype.step = function() {

    var localctx = new StepContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, BaliInstructionSetParser.RULE_step);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 49;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===BaliInstructionSetParser.LABEL || _la===BaliInstructionSetParser.EOL) {
            this.state = 48;
            this.label();
        }

        this.state = 51;
        this.instruction();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LabelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_label;
    return this;
}

LabelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LabelContext.prototype.constructor = LabelContext;

LabelContext.prototype.LABEL = function() {
    return this.getToken(BaliInstructionSetParser.LABEL, 0);
};

LabelContext.prototype.EOL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BaliInstructionSetParser.EOL);
    } else {
        return this.getToken(BaliInstructionSetParser.EOL, i);
    }
};


LabelContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterLabel(this);
	}
};

LabelContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitLabel(this);
	}
};

LabelContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitLabel(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.LabelContext = LabelContext;

BaliInstructionSetParser.prototype.label = function() {

    var localctx = new LabelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, BaliInstructionSetParser.RULE_label);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===BaliInstructionSetParser.EOL) {
            this.state = 53;
            this.match(BaliInstructionSetParser.EOL);
        }

        this.state = 56;
        this.match(BaliInstructionSetParser.LABEL);
        this.state = 57;
        this.match(BaliInstructionSetParser.T__0);
        this.state = 58;
        this.match(BaliInstructionSetParser.EOL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function InstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_instruction;
    return this;
}

InstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InstructionContext.prototype.constructor = InstructionContext;

InstructionContext.prototype.skipInstruction = function() {
    return this.getTypedRuleContext(SkipInstructionContext,0);
};

InstructionContext.prototype.jumpInstruction = function() {
    return this.getTypedRuleContext(JumpInstructionContext,0);
};

InstructionContext.prototype.pushInstruction = function() {
    return this.getTypedRuleContext(PushInstructionContext,0);
};

InstructionContext.prototype.popInstruction = function() {
    return this.getTypedRuleContext(PopInstructionContext,0);
};

InstructionContext.prototype.loadInstruction = function() {
    return this.getTypedRuleContext(LoadInstructionContext,0);
};

InstructionContext.prototype.storeInstruction = function() {
    return this.getTypedRuleContext(StoreInstructionContext,0);
};

InstructionContext.prototype.invokeInstruction = function() {
    return this.getTypedRuleContext(InvokeInstructionContext,0);
};

InstructionContext.prototype.executeInstruction = function() {
    return this.getTypedRuleContext(ExecuteInstructionContext,0);
};

InstructionContext.prototype.handleInstruction = function() {
    return this.getTypedRuleContext(HandleInstructionContext,0);
};

InstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterInstruction(this);
	}
};

InstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitInstruction(this);
	}
};

InstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.InstructionContext = InstructionContext;

BaliInstructionSetParser.prototype.instruction = function() {

    var localctx = new InstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, BaliInstructionSetParser.RULE_instruction);
    try {
        this.state = 69;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case BaliInstructionSetParser.T__1:
            this.enterOuterAlt(localctx, 1);
            this.state = 60;
            this.skipInstruction();
            break;
        case BaliInstructionSetParser.T__2:
            this.enterOuterAlt(localctx, 2);
            this.state = 61;
            this.jumpInstruction();
            break;
        case BaliInstructionSetParser.T__8:
            this.enterOuterAlt(localctx, 3);
            this.state = 62;
            this.pushInstruction();
            break;
        case BaliInstructionSetParser.T__12:
            this.enterOuterAlt(localctx, 4);
            this.state = 63;
            this.popInstruction();
            break;
        case BaliInstructionSetParser.T__14:
            this.enterOuterAlt(localctx, 5);
            this.state = 64;
            this.loadInstruction();
            break;
        case BaliInstructionSetParser.T__19:
            this.enterOuterAlt(localctx, 6);
            this.state = 65;
            this.storeInstruction();
            break;
        case BaliInstructionSetParser.T__21:
            this.enterOuterAlt(localctx, 7);
            this.state = 66;
            this.invokeInstruction();
            break;
        case BaliInstructionSetParser.T__24:
            this.enterOuterAlt(localctx, 8);
            this.state = 67;
            this.executeInstruction();
            break;
        case BaliInstructionSetParser.T__26:
            this.enterOuterAlt(localctx, 9);
            this.state = 68;
            this.handleInstruction();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SkipInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_skipInstruction;
    return this;
}

SkipInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SkipInstructionContext.prototype.constructor = SkipInstructionContext;


SkipInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterSkipInstruction(this);
	}
};

SkipInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitSkipInstruction(this);
	}
};

SkipInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitSkipInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.SkipInstructionContext = SkipInstructionContext;

BaliInstructionSetParser.prototype.skipInstruction = function() {

    var localctx = new SkipInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, BaliInstructionSetParser.RULE_skipInstruction);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this.match(BaliInstructionSetParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JumpInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_jumpInstruction;
    return this;
}

JumpInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JumpInstructionContext.prototype.constructor = JumpInstructionContext;

JumpInstructionContext.prototype.LABEL = function() {
    return this.getToken(BaliInstructionSetParser.LABEL, 0);
};

JumpInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterJumpInstruction(this);
	}
};

JumpInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitJumpInstruction(this);
	}
};

JumpInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitJumpInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.JumpInstructionContext = JumpInstructionContext;

BaliInstructionSetParser.prototype.jumpInstruction = function() {

    var localctx = new JumpInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, BaliInstructionSetParser.RULE_jumpInstruction);
    try {
        this.state = 91;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 73;
            this.match(BaliInstructionSetParser.T__2);
            this.state = 74;
            this.match(BaliInstructionSetParser.T__3);
            this.state = 75;
            this.match(BaliInstructionSetParser.LABEL);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 76;
            this.match(BaliInstructionSetParser.T__2);
            this.state = 77;
            this.match(BaliInstructionSetParser.T__3);
            this.state = 78;
            this.match(BaliInstructionSetParser.LABEL);
            this.state = 79;
            this.match(BaliInstructionSetParser.T__4);
            this.state = 80;
            this.match(BaliInstructionSetParser.T__5);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 81;
            this.match(BaliInstructionSetParser.T__2);
            this.state = 82;
            this.match(BaliInstructionSetParser.T__3);
            this.state = 83;
            this.match(BaliInstructionSetParser.LABEL);
            this.state = 84;
            this.match(BaliInstructionSetParser.T__4);
            this.state = 85;
            this.match(BaliInstructionSetParser.T__6);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 86;
            this.match(BaliInstructionSetParser.T__2);
            this.state = 87;
            this.match(BaliInstructionSetParser.T__3);
            this.state = 88;
            this.match(BaliInstructionSetParser.LABEL);
            this.state = 89;
            this.match(BaliInstructionSetParser.T__4);
            this.state = 90;
            this.match(BaliInstructionSetParser.T__7);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PushInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_pushInstruction;
    return this;
}

PushInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PushInstructionContext.prototype.constructor = PushInstructionContext;

PushInstructionContext.prototype.LABEL = function() {
    return this.getToken(BaliInstructionSetParser.LABEL, 0);
};

PushInstructionContext.prototype.LITERAL = function() {
    return this.getToken(BaliInstructionSetParser.LITERAL, 0);
};

PushInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterPushInstruction(this);
	}
};

PushInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitPushInstruction(this);
	}
};

PushInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitPushInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.PushInstructionContext = PushInstructionContext;

BaliInstructionSetParser.prototype.pushInstruction = function() {

    var localctx = new PushInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, BaliInstructionSetParser.RULE_pushInstruction);
    try {
        this.state = 102;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 93;
            this.match(BaliInstructionSetParser.T__8);
            this.state = 94;
            this.match(BaliInstructionSetParser.T__9);
            this.state = 95;
            this.match(BaliInstructionSetParser.LABEL);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 96;
            this.match(BaliInstructionSetParser.T__8);
            this.state = 97;
            this.match(BaliInstructionSetParser.T__10);
            this.state = 98;
            this.match(BaliInstructionSetParser.LITERAL);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 99;
            this.match(BaliInstructionSetParser.T__8);
            this.state = 100;
            this.match(BaliInstructionSetParser.T__11);
            this.state = 101;
            this.match(BaliInstructionSetParser.LITERAL);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PopInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_popInstruction;
    return this;
}

PopInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PopInstructionContext.prototype.constructor = PopInstructionContext;


PopInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterPopInstruction(this);
	}
};

PopInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitPopInstruction(this);
	}
};

PopInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitPopInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.PopInstructionContext = PopInstructionContext;

BaliInstructionSetParser.prototype.popInstruction = function() {

    var localctx = new PopInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, BaliInstructionSetParser.RULE_popInstruction);
    try {
        this.state = 108;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 104;
            this.match(BaliInstructionSetParser.T__12);
            this.state = 105;
            this.match(BaliInstructionSetParser.T__9);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 106;
            this.match(BaliInstructionSetParser.T__12);
            this.state = 107;
            this.match(BaliInstructionSetParser.T__13);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LoadInstructionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BaliInstructionSetParser.RULE_loadInstruction;
    return this;
}

LoadInstructionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LoadInstructionContext.prototype.constructor = LoadInstructionContext;

LoadInstructionContext.prototype.SYMBOL = function() {
    return this.getToken(BaliInstructionSetParser.SYMBOL, 0);
};

LoadInstructionContext.prototype.enterRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.enterLoadInstruction(this);
	}
};

LoadInstructionContext.prototype.exitRule = function(listener) {
    if(listener instanceof BaliInstructionSetListener ) {
        listener.exitLoadInstruction(this);
	}
};

LoadInstructionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof BaliInstructionSetVisitor ) {
        return visitor.visitLoadInstruction(this);
    } else {
        return visitor.visitChildren(this);
    }
};




BaliInstructionSetParser.LoadInstructionContext = LoadInstructionContext;

BaliInstructionSetParser.prototype.loadInstruction = function() {

    var localctx = new LoadInstructionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, BaliInstructionSetParser.RULE_loadInstruction);
    try {
        this.state = 122;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 110;
            this.match(BaliInstructionSetParser.T__14);
            this.state = 111;
            this.match(BaliInstructionSetParser.T__15);
            this.state = 112;
            this.match(BaliInstructionSetParser.SYMBOL);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 113;
            this.match(BaliInstructionSetParser.T__14);
            this.state = 114;
            this.match(BaliInstructionSetParser.T__16);
            this.state = 115;
            this.match(BaliInstructionSetParser.SYMBOL);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 116;
            this.match(BaliInstructionSetParser.T__14);
            this.state = 117;
            this.match(BaliInstructionSetParser.T__17);
            this.state = 118;
            this.match(BaliInstructionSetParser.SYMBOL);
            break;
